--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
   <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
 
-  <title>IceMe, déguster une glace</title>
+  <title>IceMe, déguster glace</title>
 </head>
 <body>
  <nav class="navbar navbar-expand-lg navbar-light bg-light navbar-fixed-top">
