--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
 
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="CSS/style.css">
   <link href="https://fonts.googleapis.com/css?family=Abril+Fatface|Nanum+Gothic|Nothing+You+Could+Do&display=swap" rel="stylesheet">
   <script src="https://kit.fontawesome.com/466f5449da.js"></script>
   <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
   <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
 
-  <title>IceMe, déguster glace</title>
+  <title>IceMe, déguster une glace</title>
 </head>
 <body>
  <nav class="navbar navbar-expand-lg navbar-light bg-light navbar-fixed-top">
